--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -4,7 +4,7 @@ externalScripts:
   - https://unpkg.com/alpinejs
 ---
 <main
-	class="[ center container stack ][ relative ][]"
+	class="[ stack ][ relative ][]"
 >
 	<article
 		x-data="{}"
@@ -66,14 +66,4 @@ externalScripts:
 			</a>
 		</div>
 	</div>
-
-	<footer>
-		<nav>
-			<ul class="[ stack-sm ][][]">
-				<li><a href="/">Home</a></li>
-				<li><a href="/apple/">Apple</a></li>
-				<li><a href="/banana/">Banana</a></li>
-			</ul>
-		</nav>
-	</footer>
 </main>
