--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -13,20 +13,19 @@
 	--size-6: calc( var( --size-5 ) * var( --ratio ) );
 
 	/* Composition */
-	--container-size: 32rem;
+	--container-size: 36rem;
 	--stack-sm-size: var( --size--2 );
 	--stack-size: var( --size-1 );
 	--stack-lg-size: var( --size-3 );
 
 	/* Fonts */
-	--font-serif: Times, "Times New Roman", serif;
 	--font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 body {
 	padding: var( --size-2 );
 	color: var( --color-black );
-	font-family: var( --font-serif );
+	font-family: var( --font-sans );
 }
 
 a {
