--- a/src/_includes/css/utilities.css
+++ b/src/_includes/css/utilities.css
@@ -1,3 +1,12 @@
+.bold {
+	font-weight: bold;
+}
+.font-sans {
+	font-family: var( --font-sans );
+}
+.no-underline {
+	text-decoration: none;
+}
 .relative {
 	position: relative;
 }
