--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@ site:
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>{{ title }} | {{ site.title }}</title>
+	<title>{% if title %}{{ title }} | {% endif %}{{ site.title }}</title>
 
 	<meta name="title" content="{{ title }}">
 
@@ -40,22 +40,16 @@ site:
 	{% endfor %}
 </head>
 <body>
-	<div class="[ center container stack ][][]">
-		<header class="[][ font-sans ][]">
-			<a href="/" class="[][ bold no-underline ][]">
-				<span role="img" aria-label="Spade">♠️</span>
-				{{ site.title }}
-			</a>
-		</header>
-
+	<div class="[ center container stack-lg ][][]">
 		{{ content | safe }}
 
-		<footer class="[][ font-sans ][ page-footer ]">
-			<nav>
+		<footer class="[ inset ][ font-sans ][ page-footer ]">
+			<nav class="[ stack-sm ][][]">
+				<a href="/"><h2 class="[][ bold ][]">{{ site.title }}</h2></a>
 				<ul class="[ stack-sm ][][]">
 					<li><a href="/apple/">Apple</a></li>
 					<li><a href="/banana/">Banana</a></li>
-					<li><a href="/carrot/">Carrot</a></li>
+					<li><a href="/cranberry/">Cranberry</a></li>
 				</ul>
 			</nav>
 		</footer>
