--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -22,8 +22,15 @@
 	--font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+	@media (max-width: 36rem) {
+		:root {
+			--container-size: 100%;
+			--inset-size: var( --size-2 );
+		}
+	}
+
 body {
-	padding: var( --size-2 );
+	padding-bottom: var( --size-2 );
 	color: var( --color-black );
 	font-family: var( --font-sans );
 }
