--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -58,7 +58,7 @@ site:
 					<a href="/"><h2 class="[][ bold ][]">Elsewhere</h2></a>
 					<ul class="[ stack-sm ][][]">
 						<li><a href="https://github.com/ashur/notification-demo">View Source</a></li>
-						<li><a href="https://ashur.cab/rera">@ashur</a></li>
+						<li><a href="https://ashur.cab/rera">ashur.cab/rera</a></li>
 					</ul>
 				</div>
 			</nav>
