--- a/src/_includes/css/blocks/notification.css
+++ b/src/_includes/css/blocks/notification.css
@@ -4,6 +4,10 @@
 	--offset: var( --size-0 );
 	--size: var( --size-2 );
 
+	display: grid;
+	align-content: center;
+	justify-content: center;
+
 	position: fixed;
 	top: var( --offset );
 	right: calc( 50vw - var( --container-size) / 2 + var( --offset ) );
@@ -22,15 +26,8 @@
 		transform: scale3d( 1, 1, 1 );
 	}
 
-.notification a {
-	display: grid;
-	align-content: center;
-	justify-content: center;
-	height: 100%;
-}
-
 /* Badge */
-.notification a:after {
+.notification:after {
 	--offset: calc( var( --size--3 ) + 1px );
 	--size: var( --size--2 );
 
@@ -52,7 +49,7 @@
 	opacity: 0;
 	transform: scale3d( 0.125, 0.125, 0.125 );
 }
-	.notification--visible a:after {
+	.notification--visible:after {
 		opacity: 1;
 		transform: scale3d( 1, 1, 1 );
 		border: solid 2px var( --background-color );
@@ -80,7 +77,7 @@
 			transform 0.5s 0.5s;
 	}
 
-	.notification a:after {
+	.notification:after {
 		transition:
 			opacity 0.75s 1.5s,
 			transform 0.75s 1.5s;
