--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -27,6 +27,7 @@ prefetch:
 
 			<ul>
 				<li>Photo by <a href="{{ image.author.url }}">{{ image.author.name }}</a></li>
+				<li>Bell icon by <a href="https://thenounproject.com/icon/3407997/">Alice Design</a></li>
 				<li>Text from Wikipedia</li>
 			</ul>
 
