--- a/src/_includes/css/blocks/page-footer.css
+++ b/src/_includes/css/blocks/page-footer.css
@@ -16,6 +16,20 @@
 	padding: 0;
 }
 
+.page-footer .badged:after {
+	--size: var( --size--2 );
+
+	content: "";
+
+	display: inline-block;
+	height: var( --size );
+	width: var( --size );
+
+	margin-left: calc( var( --size ) / var( --ratio ) );
+	border-radius: 100%;
+	background-color: red;
+}
+
 .page-footer nav {
 	display: grid;
 	column-gap: var( --size-1 );
