--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -25,6 +25,7 @@ prefetch:
 	
 			{{ content | safe }}
 
+			<h2>Credits</h2>
 			<ul>
 				<li>Photo by <a href="{{ image.author.url }}">{{ image.author.name }}</a></li>
 				<li>Bell icon by <a href="https://thenounproject.com/icon/3407997/">Alice Design</a></li>
