Remove stray link

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -71,7 +71,7 @@ site:
 				</div>
 
 				<div class="[ stack-sm ][][]">
-					<a href="/"><h2 class="[][ bold ][]">Elsewhere</h2></a>
+					<h2 class="[][ bold ][]">Elsewhere</h2>
 					<ul class="[ stack-sm ][][]">
 						<li><a href="https://github.com/ashur/notification-demo">View Source</a></li>
 						<li><a href="https://ashur.cab/rera">ashur.cab/rera</a></li>
