--- a/src/_includes/components/Notification.njk
+++ b/src/_includes/components/Notification.njk
@@ -39,7 +39,7 @@
 	"
 >
 	<a
-		x-bind:aria-hidden="url ? '' : 'true'"
+		x-bind:aria-hidden="url ? 'false' : 'true'"
 		x-bind:aria-live="url ? 'assertive' : ''"
 		x-bind:class="{ 'notification--visible': url }"
 		x-bind:href="url"
