--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -46,7 +46,9 @@ site:
 		<footer class="[ inset ][ font-sans ][ page-footer ]">
 			<nav>
 				<div class="[ stack-sm ][][]">
-					<a href="/"><h2 class="[][ bold ][]">{{ site.title }}</h2></a>
+					<h2 class="[][][]">
+						<a href="/">{{ site.title }}</a>
+					</h2>
 					<ul
 						x-data="{
 							notify( url ) {
@@ -71,7 +73,7 @@ site:
 				</div>
 
 				<div class="[ stack-sm ][][]">
-					<h2 class="[][ bold ][]">Elsewhere</h2>
+					<h2 class="[][][]">Elsewhere</h2>
 					<ul class="[ stack-sm ][][]">
 						<li><a href="https://github.com/ashur/notification-demo">View Source</a></li>
 						<li><a href="https://ashur.cab/rera">ashur.cab/rera</a></li>
