Include demo-reset

--- a/src/_includes/css/blocks.css
+++ b/src/_includes/css/blocks.css
@@ -1,3 +1,4 @@
 {% include "css/blocks/article.css" %}
+{% include "css/blocks/demo-reset.css" %}
 {% include "css/blocks/notification.css" %}
 {% include "css/blocks/page-footer.css" %}
