Re-add aria-live attribute
Lost when removing Alpine

--- a/src/_includes/components/Notification.njk
+++ b/src/_includes/components/Notification.njk
@@ -1,4 +1,8 @@
-<a class="[][][ notification ]" href="{{ (notifications | last).url }}">
+<a
+	aria-live="assertive"
+	class="[][][ notification ]"
+	href="{{ (notifications | last).url }}"
+>
 	<span class="[][ visually-hidden ][]">Update available!</span>
 	<img
 		class="[][][ notification-icon ]"
