--- a/src/_includes/css/blocks.css
+++ b/src/_includes/css/blocks.css
@@ -1,4 +1,5 @@
 {% include "css/blocks/article.css" %}
+{% include "css/blocks/aside-reset.css" %}
 {% include "css/blocks/demo-reset.css" %}
 {% include "css/blocks/notification.css" %}
 {% include "css/blocks/page-footer.css" %}
