Switch to section

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -18,11 +18,11 @@ prefetch:
 		{% endif %}
 
 		<div class="[ inset stack-lg ][][]">
-			<div class="[ stack ][][ article-contents ]">
+			<section class="[ stack ][][ article-contents ]">
 				<h1>{{ title or site.title }}</h1>
 
 				{{ content | safe }}
-			</div>
+			</section>
 
 			<aside class="[ center stack ][][ aside-reset ]">
 				<p>A real site probably wouldn’t give users the option to monkey with the notification state, but this is a demo so</p>
