Add link to blog post

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -67,6 +67,7 @@ site:
 				<div class="[ stack-sm ][][]">
 					<h2 class="[][][]">Elsewhere</h2>
 					<ul class="[ stack-sm ][][]">
+						<li><a href="https://multiline.co/mment/2021/07/building-notification-thingamajig-eleventy-data/">How this works&hellip;</a></li>
 						<li><a href="https://github.com/ashur/notification-demo">View Source</a></li>
 						<li><a href="https://ashur.cab/rera">ashur.cab/rera</a></li>
 					</ul>
